// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceSettings matches snapshot while interface cannot be found 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Stack
    horizontal={true}
  >
    <StackItem
      align="start"
    >
      <h3>
         
        deviceSettings.headerText
      </h3>
    </StackItem>
  </Stack>
  <Connect(InterfaceNotFoundMessageBox) />
</Fragment>
`;

exports[`components/devices/deviceSettings matches snapshot with one twinWithSchema 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Stack
    horizontal={true}
  >
    <StackItem
      align="start"
    >
      <h3>
         
        deviceSettings.headerText
      </h3>
    </StackItem>
  </Stack>
  <DeviceSettingsPerInterface
    deviceId={null}
    history={
      Object {
        "location": Object {
          "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
        },
      }
    }
    interfaceId="urn:contoso:com:EnvironmentalSensor:1"
    interfaceName="environmentalSensor"
    isLoading={false}
    location={
      Object {
        "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
      }
    }
    match={Object {}}
    patchDigitalTwinInterfaceProperties={[MockFunction]}
    refresh={[MockFunction]}
    setInterfaceId={
      [MockFunction] {
        "calls": Array [
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    twinWithSchema={
      Array [
        Object {
          "desiredTwin": 123,
          "reportedTwin": null,
          "settingModelDefinition": Object {
            "@type": "Property",
            "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "displayName": "Brightness Level",
            "name": "brightness",
            "schema": "long",
            "writable": true,
          },
          "settingSchema": Object {
            "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "title": "brightness",
            "type": "number",
          },
        },
      ]
    }
  />
</Fragment>
`;

exports[`components/devices/deviceSettingsPerInterface matches snapshot 1`] = `
<div
  className="pnp-detail-list scrollable-lg ms-Grid"
>
  <div
    className="list-header ms-Grid-row"
  >
    <span
      className="ms-Grid-col ms-sm3"
    >
      deviceSettings.columns.name
    </span>
    <span
      className="ms-Grid-col ms-sm2"
    >
      deviceSettings.columns.schema
    </span>
    <span
      className="ms-Grid-col ms-sm2"
    >
      deviceSettings.columns.unit
    </span>
    <span
      className="ms-Grid-col ms-sm4 reported-value"
    >
      deviceSettings.columns.reportedValue
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="deviceSettings.columns.reportedValueTooltip"
        id="tooltipHost15"
        styles={
          Object {
            "root": Object {
              "display": "inline-flex",
            },
          }
        }
      >
        <CustomizedIconButton
          aria-labelledby="tooltipHost15"
          iconProps={
            Object {
              "iconName": "Info",
            }
          }
        />
      </StyledTooltipHostBase>
    </span>
    <div
      className="ms-Grid-col ms-sm1 collapse-button"
    >
      <CustomizedIconButton
        ariaLabel="deviceSettings.command.collapseAll"
        iconProps={
          Object {
            "iconName": "ChevronUp",
          }
        }
        onClick={[Function]}
        title="deviceSettings.command.collapseAll"
      />
    </div>
  </div>
  <section
    className="list-content"
    role="list"
  >
    <DeviceSettingsPerInterfacePerSetting
      collapsed={false}
      desiredTwin={123}
      deviceId="testDevice"
      handleCollapseToggle={[Function]}
      handleOverlayToggle={[Function]}
      interfaceId="urn:contoso:com:EnvironmentalSensor:1"
      interfaceName="environmentalSensor"
      key="0"
      patchDigitalTwinInterfaceProperties={[MockFunction]}
      reportedTwin={null}
      settingModelDefinition={
        Object {
          "@type": "Property",
          "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
          "displayName": "Brightness Level",
          "name": "brightness",
          "schema": "long",
          "writable": true,
        }
      }
      settingSchema={
        Object {
          "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
          "title": "brightness",
          "type": "number",
        }
      }
      twinWithSchema={
        Array [
          Object {
            "desiredTwin": 123,
            "reportedTwin": null,
            "settingModelDefinition": Object {
              "@type": "Property",
              "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
              "displayName": "Brightness Level",
              "name": "brightness",
              "schema": "long",
              "writable": true,
            },
            "settingSchema": Object {
              "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
              "title": "brightness",
              "type": "number",
            },
          },
        ]
      }
    />
  </section>
</div>
`;
